--- a/source/less/communicating.less
+++ b/source/less/communicating.less
@@ -1,6 +1,6 @@
 @mobile: 320px;
 @tablet: 768px;
-
+@desktop: 1220px;
 .communicating {
   padding-top: 28px;
   padding-bottom: 26px;
@@ -81,3 +81,39 @@
   margin-top: 20px;
 }
 }
+
+@media (min-width:@desktop) {
+  .communicating-form {
+    position: absolute;
+    z-index: 1000;
+    max-width: 570px;
+    left: 10;
+    left: 17%;
+    padding-bottom: 57px;
+    top: 1960px;
+}
+.communicating__offer-communicating {
+  margin-top: 38px;
+  font-size: 20px;
+  line-height: 25px;
+  margin-left: 80px;
+  max-width: 190px;
+}
+.communicating__address {
+  text-align: left;
+  margin-right: 56px;
+}
+.communicating__address-city {
+  justify-content: left;
+  text-align: right;
+  margin-left: 0px;
+  display: flex;
+
+}
+
+
+}
+
+
+
+
