--- a/source/less/find-all-goods.less
+++ b/source/less/find-all-goods.less
@@ -1,5 +1,6 @@
 @mobile: 320px;
 @tablet: 768px;
+@desktop: 1220px;
 
 .find-all-goods {
   display: flex;
@@ -92,3 +93,20 @@
 }
 
 }
+@media (min-width:@desktop) {
+  .find-all-goods {
+    max-width: 243px;
+    margin-right: 0;
+  }
+  .find-all-goods__show-all-goods {
+    max-width: 169px;
+    margin-top: 64px;
+    padding: 10px 39px 11px 39px;
+    font-size: 16px;
+    margin-bottom: 32px;
+    line-height: 20px;
+}
+
+}
+
+
