--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -1,6 +1,6 @@
 @mobile: 320px;
 @tablet: 768px;
-
+@desktop: 1220px;
 .footer {
   background-color: #f2f2f2;
   display: flex;
@@ -10,14 +10,6 @@
   align-items: center;
   max-width: 320px;
   margin: 0 auto;
-}
-
-.footer__footer-content {
-  max-width: 280px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .footer__logo {
@@ -76,26 +68,63 @@
   padding-bottom: 27px;
 }
 
-
+@media (min-width:@mobile){
+  .footer__footer-content {
+    max-width: 280px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 @media (min-width:@tablet){
 .footer {
   max-width: 768px;
-  margin: 0 auto;
+  padding-top: 42px;
 }
 .footer__logo {
   border: 0;
+  width: 132px;
 }
 .footer__footer-content {
+  width: 761px;
   max-width: 708px;
-  margin: 0 auto;
   flex-direction: row;
+  justify-content:space-between;
 }
 .footer__footer-logo {
   padding-bottom: 0;
+  width: 132px;
 }
 .footer__right-logo {
   padding-top: 0;
   border: 0;
+  width: 164px;
+}
+.footer__social-links-catalog {
+  width: 150px;
+  padding-left: 0;
+}
+.right-logo__link-organization {
+  margin-right: 0;
+}
+
+}
+@media (min-width:@desktop) {
+  .footer {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding-top: 14px;
+  }
+  .footer__footer-content {
+    max-width: 1220px;
+    width: 1220px;
+  }
+  .footer__social-links-catalog {
+    margin-left: 55px;
+  }
+  .footer__social-image {
+    margin-right: 33px;
 }
 }
 
