--- a/source/less/map.less
+++ b/source/less/map.less
@@ -1,5 +1,6 @@
 @mobile: 320px;
 @tablet: 768px;
+@desktop: 1220px;
 @media (min-width:@mobile) {
   .map__iframe {
     border: 0;
@@ -21,13 +22,24 @@
   .map__iframe {
     border: 0;
     height: 426px;
-    width: 768px;
+    width: 767px;
     margin-left: -3px;
   }
 .map__iframe-form {
   height: 426px;
   width: 768px;
-  margin-left: -31px;
+  margin-left: -20px;
 }
 }
 
+@media (min-width:@desktop) {
+.map {
+  max-width: 1440px;
+  margin: 0 auto;
+  position: relative;
+}
+.map__iframe {
+  width: 100%;
+  margin-left: 0;
+}
+}
