почти добил индекс

--- a/source/less/communicating.less
+++ b/source/less/communicating.less
@@ -1,6 +1,7 @@
 @mobile: 320px;
 @tablet: 768px;
 @desktop: 1220px;
+
 .communicating {
   padding-top: 28px;
   padding-bottom: 26px;
@@ -8,10 +9,11 @@
 }
 
 .communicating__main-text {
- max-width: 280px;
- margin: 0 auto;
- display: flex;
+  max-width: 280px;
+  margin: 0 auto;
+  display: flex;
 }
+
 .communicating__offer-communicating {
   max-width: 122px;
   font-size: 16px;
@@ -45,16 +47,14 @@
     background-color: #f2f2f2;
     margin-left: -3px;
 }
+
 .communicating__main-text {
   max-width: 700px;
   margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
 }
+
 .communicating__offer-communicating {
   margin-top: 38px;
   font-size: 20px;
@@ -62,6 +62,7 @@
   margin-left: 36px;
   max-width: 190px;
 }
+
 .communicating__address {
   text-align: right;
   margin-right: 39px;
@@ -71,6 +72,7 @@
   line-height: 20px;
   max-width: 185px;
 }
+
 .communicating__address-city {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -80,6 +82,13 @@
   justify-content: flex-end;
   margin-top: 20px;
 }
+
+.communicating__index {
+  padding-top: 17px;
+  padding-bottom: 57px;
+}
+
+
 }
 
 @media (min-width:@desktop) {
@@ -92,6 +101,7 @@
     padding-bottom: 57px;
     top: 1960px;
 }
+
 .communicating__offer-communicating {
   margin-top: 38px;
   font-size: 20px;
@@ -99,10 +109,12 @@
   margin-left: 80px;
   max-width: 190px;
 }
+
 .communicating__address {
   text-align: left;
   margin-right: 56px;
 }
+
 .communicating__address-city {
   justify-content: left;
   text-align: right;
@@ -111,9 +123,4 @@
 
 }
 
-
 }
-
-
-
-
