--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -1,6 +1,7 @@
 @mobile: 320px;
 @tablet: 768px;
 @desktop: 1220px;
+
 .footer {
   background-color: #f2f2f2;
   display: flex;
@@ -24,7 +25,6 @@
   margin-bottom: 18px;
   margin-top: 22px;
   align-items: center;
-
 }
 
 .footer__social-links-li {
@@ -82,31 +82,40 @@
   max-width: 768px;
   padding-top: 42px;
 }
+
 .footer__logo {
   border: 0;
   width: 132px;
 }
+
 .footer__footer-content {
   width: 761px;
   max-width: 708px;
   flex-direction: row;
   justify-content:space-between;
 }
+
 .footer__footer-logo {
   padding-bottom: 0;
   width: 132px;
 }
+
 .footer__right-logo {
   padding-top: 0;
   border: 0;
   width: 164px;
 }
+
 .footer__social-links-catalog {
   width: 150px;
   padding-left: 0;
 }
+
 .right-logo__link-organization {
   margin-right: 0;
+}
+.footer-index {
+ padding-top: 13px;
 }
 
 }
@@ -116,15 +125,17 @@
     margin: 0 auto;
     padding-top: 14px;
   }
+
   .footer__footer-content {
     max-width: 1220px;
     width: 1220px;
   }
+
   .footer__social-links-catalog {
     margin-left: 55px;
   }
+
   .footer__social-image {
     margin-right: 33px;
 }
 }
-
