--- a/source/less/live-example.less
+++ b/source/less/live-example.less
@@ -1,3 +1,7 @@
+@mobile: 320px;
+@tablet: 768px;
+@desktop: 1220px;
+
 .live-example {
   background-color: #f2f2f2;
   display: flex;
@@ -49,11 +53,7 @@
   background-size: 125px 55px;
 }
 
-.live-example__numbers-sub:last-child {
-  background-image: url("../img/weight-back-right.png");
-  background-repeat: no-repeat;
-  background-size: 125px 55px;
-}
+
 
 .live-example__numbers-sub-header {
   font-family: "Oswald-Regular", sans-serif;
@@ -62,9 +62,7 @@
   text-transform: uppercase;
 }
 
-.live-example__numbers-sub-header:first-child {
-  margin-bottom: 9px;
-}
+
 
 .live-example__numbers-sub-content {
   font-size: 12px;
@@ -108,13 +106,7 @@
     width: 45.65%;
 }
 
-.live-example__numbers-sub:last-child {
-  width: 44.65%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 13px;
-}
+
 
 .live-example__slider {
   position: relative;
@@ -138,6 +130,7 @@
   max-width: 197px;
   margin-top: 28px;
   margin-left: 44px;
+
 }
 
 .live-example__slider-on-off-content {
@@ -154,3 +147,229 @@
   margin-left: 5px;
   margin-bottom: 4px;
 }
+@media (min-width:@mobile){
+  .live-example__numbers-sub:last-child {
+    width: 44.65%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 13px;
+  }
+  .live-example__numbers-sub-header:first-child {
+    margin-bottom: 9px;
+  }
+  .live-example__numbers-sub:last-child {
+    background-image: url("../img/weight-back-right.png");
+    background-repeat: no-repeat;
+    background-size: 125px 55px;
+  }
+  .live-example__slider-slide {
+    display: block;
+  }
+  .live-example__slider-slide-show-tablet {
+    display: none;
+  }
+  .live-example__slider-glide-button {
+    display: none;
+  }
+}
+
+@media (min-width:@tablet) {
+.live-example {
+  max-width: 768px;
+  margin:0 auto;
+  background-color: inherit;
+  border-top: 1px solid #e6e6e6;
+}
+.live-example__content {
+  max-width: 708px;
+  margin-left: 32px;
+}
+.live-example__header {
+  font-size: 60px;
+  line-height: 60px;
+  margin-top: 28px;
+  margin-bottom: 65px;
+}
+.live-example__sub {
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 53px;
+  margin-left: -2px;
+}
+.live-example__numbers {
+  margin-left: -2px;
+  max-width: 384px;
+}
+.live-example__numbers-sub-header {
+  font-size: 30px;
+  text-transform: uppercase;
+  line-height: 37.02px;
+}
+
+.live-example__numbers-sub-header-five-kg {
+  margin-bottom: 12px;
+  margin-top: 10px;
+  margin-left: -15px;
+  width: 109px;
+}
+.live-example__numbers-sub-content {
+  font-size: 14px;
+  line-height: 14px;
+}
+.live-example__numbers-sub:first-child {
+  padding-top: 5px;
+  max-width: 162px;
+  padding-right: 33px;
+  text-align: center;
+  padding-left: 23px;
+  margin-right: 16px;
+  background-size: 162px 72px;
+}
+.live-example__numbers-sub-content-low-weight {
+  padding-left: 10px;
+  background-color: #fff;
+  max-width: 198px;
+  margin-left: -24px;
+  padding-right: 0;
+}
+
+.live-example__numbers-sub-header-sixty-days {
+  margin-left: 8px;
+  margin-top: 2px;
+}
+.live-example__numbers-sub-content-total-time {
+  background-color: #fff;
+  max-width: 127px;
+  margin-left: 13px;
+  margin-top: 2px;
+  padding-left: 0;
+  padding-right: 0;
+}
+.live-example__numbers-plus-price {
+  display: flex;
+}
+.live-example__numbers-sub-header:first-child {
+
+}
+.live-example__price {
+  font-size: 20px;
+  line-height: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.live-example__price {
+  display: flex;
+  align-items: flex-end;
+  margin-left: 164px;
+  margin-top: 11px;
+}
+
+.live-example__numbers-sub:last-child {
+  width: 189px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 13px;
+}
+
+.live-example__numbers-sub-last-child {
+  width: 189px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 13px;
+}
+.live-example__numbers-sub:last-child {
+  background-size: 162px 71px;
+  background-size: 161px 71px;
+    padding-right: 12px;
+}
+
+
+.live-example__price-fifteen-thousand {
+  margin-top: 9px;
+}
+.live-example__slider-slide {
+  display: none;
+}
+
+.live-example__slider {
+  margin-top: 230px;
+  margin-left: -31px;
+  margin-right: -28px;
+  position: relative;
+  background-color: #f2f2f2;
+}
+
+.live-example__slider-slide-show-tablet {
+  display: block;
+  position: absolute;
+  top: -167px;
+  left: 47px;
+}
+
+.live-example__slider-button {
+  font-size: 20px;
+  line-height: 20px;
+}
+
+.live-example__slider-controls {
+  max-width: 569px;
+  margin-top: 332px;
+  margin-left: 98px;
+  margin-bottom: 48px;
+}
+
+.live-example__slider-on-off-content-image {
+  display: none;
+}
+
+.live-example__slider-on-off-content {
+  border: 1px solid #cdcdcd;
+  background-color: #dcdcdc;
+  width: 426px;
+  border-radius: 15px;
+  margin-top: 7px;
+  height: 3px;
+  margin-left: 0;
+  position: relative;
+}
+
+.live-example__slider-glide-button {
+  display: block;
+  position: absolute;
+  top: -16px;
+  left: 45.7%;
+}
+
+
+}
+
+@media (min-width:@desktop) {
+  .live-example {
+    max-width: 1440px;
+    border-top: 0;
+  }
+  .live-example-content {
+    max-width: 1220px;
+  }
+  .live-example__header {
+    font-size: 60px;
+    line-height: 60px;
+    margin-top: 7px;
+    margin-bottom: 65px;
+    margin-left: 22px;
+}
+}
+
+
+
+
+
+
+
+
+
+
